--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,92 @@
-body {
+@import url("https://fonts.googleapis.com/css2?family=Cherry+Bomb+One&family=Exo+2:wght@400;500;600;700;800&family=League+Spartan:wght@400;500;700;800&family=Outfit:wght@300;400;500;600;700;800&family=Plus+Jakarta+Sans:wght@300;400;500;600;700;800&family=Poppins:wght@300;400;500;600;700;800&family=Press+Start+2P&family=Roboto:wght@400;500;700&family=Space+Mono:wght@400;700&display=swap");
+
+* {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: "Roboto", sans-serif;
+}
+.app {
+  width: 100%;
+  padding: 45px;
+}
+.purpose {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 10px;
+  width: 100%;
+}
+.btn {
+  font-size: 20px;
+  font-weight: 500;
+  line-height: 23.44px;
+  letter-spacing: 0.05em;
+  text-align: left;
+  color: #424244;
+  border: none;
+  /* color: #fff; */
+
+  padding: 12px 20px 12px 20px;
+  border-radius: 8px;
+  opacity: 0px;
+  cursor: pointer;
+  /* background-color: #ff6700; */
+}
+.active {
+  background-color: #ff6700;
+  color: #fff;
+}
+.selectBtn {
+  padding: 20px 40px 20px 40px;
+  gap: 10px;
+  color: #fff;
+  border-radius: 12px;
+  opacity: 0px;
+  font-size: 20px;
+  font-weight: 500;
+  line-height: 24.2px;
+  background: #ff6700;
+  border: none;
+  margin-top: 24px;
+  width: 100%;
+  cursor: pointer;
+}
+.selectOptions {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 20px;
+  margin-top: 24px;
+  width: 100%;
+}
+.select {
+  font-family: Roboto;
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 18.75px;
+  letter-spacing: 0.05em;
+  text-align: left;
+  color: #424244;
+  border: none;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.forms {
+  margin-top: 24px;
+  display: flex;
+  flex-direction: column;
+  gap: 12px;
+  width: 100%;
+  justify-content: center;
+}
+
+.form {
+  padding: 12px 20px 12px 20px;
+  gap: 10px;
+  border-radius: 12px;
+  border: 2px solid #ff6700;
+  outline: none;
+
+  font-size: 20px;
+  color: #424244;
 }
